<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Spinner android:id="@id/from" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <TextView android:textSize="18.0sp" android:gravity="center" android:layout_gravity="center" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transfer_label" />
        <Spinner android:id="@id/to" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <com.notriddle.budget.EditTextDefaultFocus android:id="@id/description" android:nextFocusDown="@id/amount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/description_hint" android:singleLine="true" android:inputType="textNoSuggestions" android:nextFocusForward="@id/amount" />
    <com.notriddle.budget.EditMoney android:textStyle="bold" android:id="@id/amount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/amount_hint" android:imeActionLabel="@android:string/ok" android:imeActionId="42" />
</LinearLayout>