<?xml version="1.0" encoding="utf-8"?>
<com.notriddle.budget.MonitorScrollView android:id="@id/scroll" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.notriddle.budget.DeleteView android:id="@id/docs" android:padding="@dimen/cardSpacing" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:background="@drawable/stateful_card_background" android:padding="@dimen/cardPadding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paycheck_docs" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <TextView android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gotIt" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="true" />
            </RelativeLayout>
        </com.notriddle.budget.DeleteView>
        <RelativeLayout android:id="@id/spendingCard" android:padding="@dimen/fullPadding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/presentText" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paycheck_spent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:fontFamily="sans-serif-light" />
            <TextView android:textSize="@dimen/presentText" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/spent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            <ProgressBar android:id="@id/progress" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/spent" style="@style/Style.ProgressBar" />
        </RelativeLayout>
        <include layout="@layout/cards" />
    </LinearLayout>
</com.notriddle.budget.MonitorScrollView>